# clipper

./: .gitignore  README.md  logo-color.txt  logo-small-color.txt  pyproject.toml  tui.sh
clipper/: __init__.py  __main__.py  cli.py  compress.py  config.py  history.py  tui.py  watcher.py
vidtools/: __init__.py  cli.py  compress.py  config.py  tui.py  watcher.py
