[project]
name = "vidtools"
version = "0.1.0"
description = "Video compression and processing utilities"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.45.0",
    "watchdog>=3.0.0",
]

[project.scripts]
vid = "vidtools.cli:app"
vidtui = "vidtools.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vidtools"]
