[project]
name = "clipper"
version = "0.1.0"
description = "Video compression TUI with clipboard sharing"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "textual>=0.45.0",
    "watchdog>=3.0.0",
]

[project.scripts]
clip = "clipper.cli:app"
clipper = "clipper.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clipper"]
